# vt-agent-redteam-poc

./: .gitignore  AGENTS.md  README.md  SETUP.md  STATUS.md  STUDY_EXPORT.md
prototype/: .gitignore  README.md  pyproject.toml
prototype/src/vt_agent_redteam/: __init__.py  cli.py  harness.py  manifest_loader.py  types.py
prototype/src/vt_agent_redteam/audio/: __init__.py  tts_local.py  wav_collector.py  wav_publisher.py
prototype/src/vt_agent_redteam/corpus/: __init__.py  brand_protection.yaml  cheating_integrity.yaml  dating_romance.yaml  diversity_framing.yaml  education_specific.yaml  emotional_manipulation.yaml  forbidden_topics.yaml  harassment.yaml  hate.yaml  illicit.yaml  impersonation.yaml  jailbreak.yaml  loader.py  medical_legal_advice.yaml  misinformation.yaml  off_topic_academic.yaml  personal_information.yaml  politics.yaml  prompt_leakage.yaml  promptfoo_generated.yaml  pyrit_generated.yaml  self_harm.yaml  sexual.yaml  stakeholder_protection.yaml  violence.yaml
prototype/src/vt_agent_redteam/runners/: __init__.py  direct_llm_runner.py  http_moderation_runner.py  langfuse_trace_runner.py  livekit_room.py  synthetic_candidate.py
prototype/src/vt_agent_redteam/scorers/: __init__.py  base.py  expected_verdict_scorer.py  forbidden_topics_detector.py  refusal_detector.py  (+2 more)
prototype/tests/: conftest.py  test_cli_manifest_run.py  test_corpus_loader.py  test_http_moderation.py  test_langfuse_runner.py  test_livekit_room_metadata.py  test_manifest_loader.py  test_override_gate.py  test_redaction.py  test_scorers.py  test_types.py  test_workflow_contract.py
(+83 files in other folders)
