[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vt-agent-redteam"
version = "0.0.2"
description = "Red-team test harness for LiveKit-hosted agents at Varsity Tutors."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Varsity Tutors VT4S" }
]

dependencies = [
  "livekit-api>=0.8.0",
  "livekit>=1.1.0",
  "livekit-protocol>=0.7.0",
  "openai>=1.50.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "numpy>=2.0",
]

[project.optional-dependencies]
supabase = [
  "supabase>=2.7",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
vt-redteam = "vt_agent_redteam.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vt_agent_redteam = ["corpus/*.yaml", "storage/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
